frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: frontend
          image: srikavyapendiala/frontend:0.0.2  
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
