ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

          - path: /api/v1/employees
            pathType: Prefix 
            backend:
              service:
                name: springboot-service
                port:
                  number: 8080
